spacing issue

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ nav .right a span {
     justify-content: space-between;
     align-items: center;
     padding: 0 50px;
-    margin: 50px 0;
+    margin: 50px 8;
     gap: 40px;
 
 }
